# pycode-agent

./: .gitignore  LICENSE  README.md  pyproject.toml  项目规划书.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-29-pycode-vertical-slice.md
docs/superpowers/specs/: 2026-05-29-pycode-design.md
src/pycode_agent/cli/: builder.py  commands.py  main.py  render.py  repl.py
src/pycode_agent/config/: loader.py  settings.py
src/pycode_agent/context/: scanner.py
src/pycode_agent/core/: agent.py  context_manager.py  messages.py  session.py
src/pycode_agent/logs/: audit.py  config.py
src/pycode_agent/model/: base.py  errors.py  fake.py  openai_compatible.py  streaming.py
src/pycode_agent/security/: approval.py  paths.py  policy.py
src/pycode_agent/tools/: base.py  file_tools.py  git_tools.py  memory_tools.py  registry.py  shell_tools.py
src/pycode_agent/utils/: diff.py  proc.py
tests/: test_smoke.py
tests/integration/: conftest.py  test_agent_loop.py  test_cli.py
tests/unit/: test_approval.py  test_audit.py  test_commands.py  test_config.py  test_context_manager.py  test_diff.py  test_fake_provider.py  test_file_tools.py  test_git_memory_tools.py  test_messages.py  test_openai_provider.py  test_openai_stream.py  test_paths.py  test_policy.py  test_proc.py  test_registry.py  test_render.py  test_scanner.py  test_session.py  test_shell_tools.py  test_streaming.py
