[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycode-agent"
version = "0.2.0"
description = "Clean-room Claude Code-like coding CLI (vertical slice)"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "rich>=13.7",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
pycode = "pycode_agent.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pycode_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
