[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycode-agent"
version = "0.2.0"
description = "Clean-room Claude Code-like coding CLI (vertical slice)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["llm", "agent", "cli", "coding-assistant", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "rich>=13.7",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
pycode = "pycode_agent.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pycode_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
# main.py must reconfigure stdio encoding BEFORE importing typer/rich (E402);
# Typer uses function-call defaults (Option(...)) as an idiom (B008).
"src/pycode_agent/cli/main.py" = ["E402", "B008"]
# Tests favour compact setup (semicolons) and use `assert False` / dynamic imports.
"tests/**" = ["E702", "E701", "B011", "F401", "E402", "B904", "B007"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.coverage.run]
branch = true
source = ["pycode_agent"]

[tool.coverage.report]
show_missing = true
skip_covered = true
